...
        DeviceOrientation.portraitUp,
      ]);
    _errorMessage = "";
    _isLoading = false;
    super.initState();
   
    analytics.logEvent(name: 'Login');
  }

  @override
  dispose() {
    SystemChrome.setPreferredOrientations([
        DeviceOrientation.portraitUp,
...
            bottomRight: const Radius.circular(5.0)),
      ),
      child: Padding(
        padding: EdgeInsets.only(left: 10),
        child: Center(
          child: TextField(
            key: Key('field_username'),
            controller: _usernameController,
            style: TextStyle(
                color: textColor2,
                fontSize: mediaquery.width / textSize14sp,
                fontFamily: 'ProximaReguler'),
            maxLines: 1,
...
      ),
      child: Padding(
        padding: EdgeInsets.only(left: 10),
        child: Center(
          child: TextField(
            controller: _passwordController,
            key: Key('field_password'),
            style: TextStyle(
                color: textColor2,
                fontSize: mediaquery.width / textSize14sp,
                fontFamily: 'ProximaReguler'),
            decoration: new InputDecoration(
              border: InputBorder.none,
...
