...
      return Container(
        margin: EdgeInsets.only(left: 20.0, right: 20.0, bottom: 10.0),
        child: Row(
        mainAxisAlignment: MainAxisAlignment.spaceBetween,
        children: <Widget>[
            Text(
              'Tentang saya',
              style: TextStyle(
                fontSize: mediaquery.width/textSize18sp,
                color: backgroundYellow,
                fontFamily: 'ProximaBold'
              ),
            ),
...
                               print('masuk k status false');
                               apiEndorse();
                            }
                          });
              },
                          child: Row(
                            key: Key('tambahendorse'),
                mainAxisAlignment: MainAxisAlignment.spaceBetween,
                children: <Widget>[
                  Text(
                    'Tambah',
                    style: TextStyle(
                      fontSize: mediaquery.width/textSize14sp,
...
