...
    );
  }

  Widget _button() {
    var mediaquery = MediaQuery.of(context).size;
    return Container(
      key: Key('tern_conditions'),
      margin: EdgeInsets.only(left: 20.0, right: 20.0, top: 10),
      width: double.infinity,
      height: mediaquery.width/buttonHeight1,
      child: ButtonTheme(
        shape: RoundedRectangleBorder(
          borderRadius: new BorderRadius.circular(5.0),
...
